--- a/.vscode/Makefile
+++ b/.vscode/Makefile
@@ -1,7 +1,7 @@
 ###############
 ## VARIABLES ##
 ###############
-LANGUAGE_MODE ?= C
+LANGUAGE_MODE ?= Cpp
 COMPILATION_MODE ?= Debug
 ENABLE_WARNINGS ?= 1
 WARNINGS_AS_ERRORS ?= 0
@@ -11,26 +11,28 @@ C_STANDARD ?= c99
 CPP_COMPILER ?= g++
 CPP_STANDARD ?= c++11
 EXECUTABLE_NAME ?= main
-ARCHITECTURE ?= 64
+ARCHITECTURE ?= ""
 COMPILER_ARGS ?= ""
 LINKER_ARGS ?= ""
 INCLUDE_PATHS ?= ""
 DEBUG_FLAGS ?= -g3 -O0
 RELEASE_FLAGS ?= -O3 -DNDEBUG
+CPP_COMPILER_FLAGS = ""
+C_COMPILER_FLAGS = ""
 
 #######################
 ## OS DEPENDENT VARS ##
 #######################
 ifeq '$(findstring ;,$(PATH))' ';'
-  detected_OS := Windows
+  detected_OS := PlainWindows
 else
   detected_OS := $(shell uname 2>/dev/null || echo Unknown)
   detected_OS := $(patsubst CYGWIN%,Cygwin,$(detected_OS))
   detected_OS := $(patsubst MSYS%,MSYS,$(detected_OS))
-  detected_OS := $(patsubst MINGW%,MSYS,$(detected_OS))
+  detected_OS := $(patsubst MINGW%,MINGW,$(detected_OS))
 endif
 
-ifeq ($(detected_OS), Windows)
+ifeq ($(detected_OS), PlainWindows)
 RM_FUNC = del /s /q
 CLEAN_PATH = *.o
 else
@@ -41,54 +43,54 @@ endif
 ########################
 ## COMPILER ARGUMENTS ##
 ########################
-ifeq ($(COMPILATION_MODE), Debug)
-C_COMPILER_FLAGS = $(DEBUG_FLAGS)
-CPP_COMPILER_FLAGS = $(DEBUG_FLAGS)
-else ifeq ($(COMPILATION_MODE), Release)
-C_COMPILER_FLAGS = $(RELEASE_FLAGS)
-CPP_COMPILER_FLAGS = $(RELEASE_FLAGS)
-endif
-
-ifeq ($(ARCHITECTURE),)
-C_COMPILER_FLAGS = $(C_COMPILER_FLAGS) -m$(ARCHITECTURE)
-CPP_COMPILER_FLAGS = $(C_COMPILER_FLAGS) -m$(ARCHITECTURE)
+ifeq ($(COMPILATION_MODE), Release)
+C_COMPILER_FLAGS := $(RELEASE_FLAGS)
+CPP_COMPILER_FLAGS := $(RELEASE_FLAGS)
+else
+C_COMPILER_FLAGS := $(DEBUG_FLAGS)
+CPP_COMPILER_FLAGS := $(DEBUG_FLAGS)
 endif
 
 ifeq ($(C_STANDARD),)
-C_COMPILER_FLAGS = $(C_COMPILER_FLAGS) -std=$(C_STANDARD)
+C_COMPILER_FLAGS := $(C_COMPILER_FLAGS) -std=$(C_STANDARD)
+endif
+ifeq ($(CPP_STANDARD),)
+CPP_COMPILER_FLAGS := $(CPP_COMPILER_FLAGS) -std=$(CPP_STANDARD)
 endif
 
-ifeq ($(C_STANDARD),)
-CPP_COMPILER_FLAGS = $(C_COMPILER_FLAGS) -std=$(CPP_STANDARD)
+ifneq ($(ARCHITECTURE), "")
+C_COMPILER_FLAGS := $(C_COMPILER_FLAGS) -m$(ARCHITECTURE)
+CPP_COMPILER_FLAGS := $(CPP_COMPILER_FLAGS) -m$(ARCHITECTURE)
 endif
 
-ifeq ($(COMPILER_ARGS),)
-C_COMPILER_FLAGS = $(C_COMPILER_FLAGS) $(COMPILER_ARGS)
-CPP_COMPILER_FLAGS = $(CPP_COMPILER_FLAGS) $(COMPILER_ARGS)
+ifneq ($(COMPILER_ARGS), "")
+C_COMPILER_FLAGS := $(C_COMPILER_FLAGS) $(COMPILER_ARGS)
+CPP_COMPILER_FLAGS := $(CPP_COMPILER_FLAGS) $(COMPILER_ARGS)
 endif
 
-ifeq ($(INCLUDE_PATHS),)
-C_COMPILER_FLAGS = $(C_COMPILER_FLAGS) -I $(INCLUDE_PATHS)
-CPP_COMPILER_FLAGS = $(CPP_COMPILER_FLAGS) -I $(INCLUDE_PATHS)
+ifneq ($(INCLUDE_PATHS), "")
+C_COMPILER_FLAGS := $(C_COMPILER_FLAGS) -I $(INCLUDE_PATHS)
+CPP_COMPILER_FLAGS := $(CPP_COMPILER_FLAGS) -I $(INCLUDE_PATHS)
 endif
 
-ifeq ($(LINKER_ARGS),)
-C_COMPILER_FLAGS = $(C_COMPILER_FLAGS) $(LINKER_ARGS)
-CPP_COMPILER_FLAGS = $(CPP_COMPILER_FLAGS) $(LINKER_ARGS)
+ifneq ($(LINKER_ARGS), "")
+C_COMPILER_FLAGS := $(C_COMPILER_FLAGS) $(LINKER_ARGS)
+CPP_COMPILER_FLAGS := $(CPP_COMPILER_FLAGS) $(LINKER_ARGS)
 endif
 
 ifeq ($(ENABLE_WARNINGS), 1)
-C_COMPILER_FLAGS += $(WARNINGS)
-CPP_COMPILER_FLAGS += $(WARNINGS)
+ifneq ($(WARNINGS), "")
+C_COMPILER_FLAGS := $(C_COMPILER_FLAGS) $(WARNINGS)
+CPP_COMPILER_FLAGS := $(CPP_COMPILER_FLAGS) $(WARNINGS)
 endif
-
 ifeq ($(WARNINGS_AS_ERRORS), 1)
-C_COMPILER_FLAGS += -Werror
-CPP_COMPILER_FLAGS += -Werror
+C_COMPILER_FLAGS := $(C_COMPILER_FLAGS) -Werror
+CPP_COMPILER_FLAGS := $(CPP_COMPILER_FLAGS) -Werror
+endif
 endif
 
-C_COMPILER_CALL = $(C_COMPILER) $(C_COMPILER_FLAGS)
-CPP_COMPILER_CALL = $(CPP_COMPILER) $(CPP_COMPILER_FLAGS)
+C_COMPILER_CALL := $(C_COMPILER) $(C_COMPILER_FLAGS)
+CPP_COMPILER_CALL := $(CPP_COMPILER) $(CPP_COMPILER_FLAGS)
 
 ######################
 ## WILDCAR COMMANDS ##
@@ -109,12 +111,11 @@ CC_OBJECTS = $(patsubst %.cc, %.o, $(CC_SRCS))
 ## LANGUAGE MODE  ##
 ####################
 ifeq ($(LANGUAGE_MODE), C)
-COMPILER_CALL = $(C_COMPILER_CALL)
-OBJECTS = $(C_OBJECTS)
-endif
-ifeq ($(LANGUAGE_MODE), Cpp)
-COMPILER_CALL = $(CPP_COMPILER_CALL)
-OBJECTS = $(CPP_OBJECTS) $(CC_OBJECTS) $(CXX_OBJECTS)
+COMPILER_CALL := $(C_COMPILER_CALL)
+OBJECTS := $(C_OBJECTS)
+else
+COMPILER_CALL := $(CPP_COMPILER_CALL)
+OBJECTS := $(CPP_OBJECTS) $(CC_OBJECTS) $(CXX_OBJECTS)
 endif
 
 ####################
