--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
 # Ignore all
 *
 # Unignore all with extensions
-!Makefile
 !*.*
 !*.txt
 TODO.txt
 # Unignore all dirs
 !*/
 *.pdf
+!Makefile
+!LICENSE
+c_cpp_properties.json
+launch.json
+settings.json
 
 test*
 build*
+Debug/
+Release/
 
 .vscode/c_cpp_properties.json
 *.zip
